fix: update colors to match documentation style (dark mode)

--- a/examples/starter/src/index.css
+++ b/examples/starter/src/index.css
@@ -10,5 +10,5 @@ body,
   justify-content: center;
 
   color: #fff;
-  background-color: #242424;
+  background-color: hsl(0, 0%, 4%);
 }
